--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -1,6 +1,6 @@
 .profile {
   display: flex;
-  margin-left: 20px;
+  margin-left: 40px;
   gap: 100px;
   width: 1440px;
 }
